force-app/main/default/objects/Conversion_Forecast__c/Conversion_Forecast__c.object-meta.xml
<CustomObject>
    <description>A projected signings + value forecast for a horizon, with deterministic confidence band and an AI-or-template driver narrative.</description>
    <label>Conversion Forecast</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Forecast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversion Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>