force-app/main/default/objects/Conversion_Forecast__c/fields/Confidence_Low__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Low__c</fullName>
    <description>Lower bound of the projected-signed confidence band.</description>
    <label>Confidence Low</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>