force-app/main/default/objects/Conversion_Forecast__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <description>When this forecast was produced.</description>
    <label>Generated At</label>
    <type>DateTime</type>
</CustomField>