force-app/main/default/objects/Conversion_Forecast__c/fields/Horizon_Days__c.field-meta.xml
<CustomField>
    <fullName>Horizon_Days__c</fullName>
    <description>Forecast horizon (30 / 60 / 90).</description>
    <label>Horizon Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>