force-app/main/default/objects/Conversion_Forecast__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Firm owner the forecast was delivered to.</description>
    <label>Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Conversion Forecasts</relationshipLabel>
    <relationshipName>Conversion_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>