force-app/main/default/objects/Conversion_Forecast__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>End of the forecast window.</description>
    <label>Period End</label>
    <type>Date</type>
</CustomField>