force-app/main/default/objects/Conversion_Forecast__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>Start of the forecast window.</description>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>