force-app/main/default/objects/Conversion_Forecast__c/fields/Projected_Signed__c.field-meta.xml
<CustomField>
    <fullName>Projected_Signed__c</fullName>
    <description>Projected number of signed retainers in the horizon.</description>
    <label>Projected Signed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>