force-app/main/default/objects/Conversion_Forecast__c/fields/Projected_Value__c.field-meta.xml
<CustomField>
    <fullName>Projected_Value__c</fullName>
    <description>Projected fee value of those signings.</description>
    <label>Projected Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>